--- a/cmake/OuterLibConfig.cmake.in
+++ b/cmake/OuterLibConfig.cmake.in
@@ -1,3 +1,6 @@
 @PACKAGE_INIT@
 
+find_dependency(InnerLibA REQUIRED)
+find_dependency(InnerLibB REQUIRED)
+
 include("${CMAKE_CURRENT_LIST_DIR}/OuterLibTargets.cmake")
